tempfile/derivative/tests/compile-fail/derive-debug-unused.rs
#![deny(dead_code)]

#[cfg(feature = "use_core")]
extern crate core;

#[macro_use]
extern crate derivative;

#[derive(Derivative)]
#[derivative(Debug)]
struct Foo {
    foo: u8,
    #[derivative(Debug="ignore")]
    bar: u8,
}

fn main() {
    let _ = Foo { foo: 42, bar: 1 };
}