tempfile/derivative/tests/compile-fail/derive-debug-unused.stderr
error: field is never used: `bar`
  --> $DIR/derive-debug-unused.rs:14:5
   |
14 |     bar: u8,
   |     ^^^^^^^
   |
note: lint level defined here
  --> $DIR/derive-debug-unused.rs:1:9
   |
1  | #![deny(dead_code)]
   |         ^^^^^^^^^
